se de la vida al modulo links

--- a/src/app/detail-link/detail-link.component.html
+++ b/src/app/detail-link/detail-link.component.html
@@ -18,15 +18,15 @@
         <ion-label>
           <h2>Usuario</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, vero. </p><br>
-          <ion-button size="small">copiar</ion-button>
         </ion-label>
+        <ion-button slot="end" size="small">copiar</ion-button>
       </ion-item>
       <ion-item>
         <ion-label>
           <h2>Password</h2>
           <p>12345678</p><br>
-          <ion-button size="small">copiar</ion-button> 
         </ion-label>
+        <ion-button slot="end" size="small">copiar</ion-button> 
       </ion-item>
     </ion-card-content>
   </ion-card>
