--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -11,7 +11,7 @@
 
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" [routerLink]="['/tabs/tab3']">
+    <ion-tab-button tab="tab3" [routerLink]="['/tabs/notes']">
       <img src="https://cdn.hugeicons.com/icons/note-03-stroke-rounded.svg" alt="note-03" width="24" height="24" />
       <ion-label>Notas</ion-label>
     </ion-tab-button>
