se implementa formulario reactivo

--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -9,37 +9,38 @@
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
-  <ion-text color="primary">
-    <h3>Ingresa los datos</h3>
-  </ion-text>
-  <ion-item>
-    <ion-input labelPlacement="floating" color="primary" [(ngModel)]="link" >
-      <div slot="label">Link</div>
-    </ion-input>
-  </ion-item>
-
-  <ion-item>
-    <ion-input labelPlacement="floating" color="primary" [(ngModel)]="name">
-      <div slot="label">Nombre de la aplicacion <ion-text color="danger">(Required)</ion-text></div>
-    </ion-input>
-    <ion-text color="danger" *ngif="name">
-      El campo es Requerido
+  <form [formGroup]="dataForm" (ngSubmit)="confirm()">
+    <ion-text color="primary">
+      <h3>Ingresa los datos</h3>
     </ion-text>
-  </ion-item>
-
-  <ion-item>
-    <ion-input labelPlacement="floating" color="primary" [(ngModel)]="username">
-      <div slot="label">Nombre de Usuario <ion-text color="danger">(Required)</ion-text></div>
-
-    </ion-input>
-  </ion-item>
-
-  <ion-item>
-    <ion-input labelPlacement="floating" color="primary" [(ngModel)]="password">
-      <div slot="label">Password del Usuario <ion-text color="danger">(Required)</ion-text></div>
-    </ion-input>
-  </ion-item>
+    <ion-item>
+      <ion-input labelPlacement="floating" color="primary" formControlName="link" >
+        <div slot="label">Link</div>
+      </ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input labelPlacement="floating" color="primary" formControlName="name">
+        <div slot="label">Nombre de la aplicacion <ion-text color="danger">(Required)</ion-text></div>
+      </ion-input>
+      <p>{{dataForm.get('name')?.value}}</p>
+      <!-- <ion-text color="danger" *ngif="name">
+        El campo es Requerido
+      </ion-text> -->
+    </ion-item>
   
+    <ion-item>
+      <ion-input labelPlacement="floating" color="primary" formControlName="username">
+        <div slot="label">Nombre de Usuario <ion-text color="danger">(Required)</ion-text></div>
+  
+      </ion-input>
+    </ion-item>
+  
+    <ion-item>
+      <ion-input labelPlacement="floating" color="primary" formControlName="password">
+        <div slot="label">Password del Usuario <ion-text color="danger">(Required)</ion-text></div>
+      </ion-input>
+    </ion-item>
+  </form>
 </ion-content>
 
 <ion-toast
